2004-08-10  Andrew Cagney  <cagney@gnu.org>

	* utils.c (xmmalloc): Delete.
	(xmalloc): Inline xmmalloc and mmalloc calls.
	(msavestring): Use xmalloc.
	* defs.h (xmmalloc): Delete declaration.
	* xcoffread.c (xcoff_symfile_init): Use xmalloc instead of
	xmmalloc.
	* symmisc.c (extend_psymbol_list): Ditto.
	* symfile.c (init_psymbol_list): Ditto.
	* source.c (find_source_lines): Ditto.
	* hpread.c (hpread_symfile_init, hpread_lookup_type): Ditto.
	* elfread.c (elf_symtab_read): Ditto.
	* dbxread.c (dbx_symfile_init, init_bincl_list): Ditto.
	* coffread.c (coff_symfile_init): Ditto.

2004-08-10  David Carlton  <carlton@bactrian.org>

	* MAINTAINERS: Remove David Carlton from c++ testsuite
	maintainers.

2004-08-10  Jerome Guitton  <guitton@gnat.com>

	* symfile.c (symbol_file_add_with_addrs_or_offsets): Make sure to
	print a line feed before the prompt.

2004-08-10  Mark Kettenis  <kettenis@gnu.org>

	* procfs.c (procfs_pid_to_str): Use "%ld" to print LWP.

2004-08-09  Joel Brobecker  <brobecker@gnat.com>

	General cleanup of the AIX xm include file:
	* config/xm-aix4.h (fd_set): Remove undefine.
	Remove include of <sys/select.h>.
	(HAVE_TERMIO): Remove define.
	(USG): Likewise.
	(NULL): Remove redefine.
	(alloca): Remove #pragma.
	(vfork): Remove define.
	(termdef): Remove.
	(SIGWINCH_HANDLER): Remove.
	(SIGWINCH_HANDLER_BODY): Remove.

2004-08-09  Mark Kettenis  <kettenis@gnu.org>

	* configure.tgt (x86_64-*-openbsd*): Set gdb_osabi to
	GDB_OSABI_OPENBSD_ELF.

2004-08-07  Robert Millan  <robertmh@gnu.org>

	* bsd-kvm.c: Check for nlist.h before including it.

2004-08-09  Mark Kettenis  <kettenis@gnu.org>

	* i386bsd-nat.c (_initialize_i386bsd_nat): Remove `struct
	sigcontext' offset consistency checks for ancient BSD.

	* gdb_curses.h [HAVE_CURSESX_H]: Include <cursesX.h>

	* configure.in: Check for <sys/types.h>.  Check return and
	argument types of ptrace.
	* configure, config.in: Regenerate.	

2004-08-09  Jim Blandy  <jimb@redhat.com>
